Api doc fetching is now working. Need to handle the promise generated by Restangular to properly display the documentation

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -20,10 +20,9 @@
         <div ui-codemirror="{onLoad : codemirrorLoaded}" ng-model="code">
 
          </div>
-        <input ng-click="doDocify()" type="submit" value="Docify">
      </form>
      <div id="doc">
-         The documentation should appear here
+         {{currentDoc}}
      </div>
 
   </article>
